--- a/tab.css
+++ b/tab.css
@@ -103,6 +103,7 @@
     #accomodation h1 {        
         margin: 10px;
         margin-left: 55px;
+        margin-top: 40px;
 
         
     }
@@ -115,6 +116,9 @@
         width: 40%;
         margin: 10px;        
         overflow: hidden;       
+    }
+    .vignette__container h2 {
+        margin-left: 14px;
     }
     .vignette {               
         width: auto;         
@@ -138,4 +142,25 @@
     .popular__container {
         width: 70%;        
     }
+    #activity__h1 {
+        margin-top: 0;
+       
+    }
+    #activity {
+        flex-direction: column;
+        height: 994px;
+        margin-top: 0;
+        align-content: space-around;
+    }
+    .activity__big, .activity__small {
+        width: 33%;
+    }
+    .activity__box {
+        height: 190px;
+        width: auto;
+    }
+    .activity__box img {
+        height: 133px;
+    }
+
 }
