--- a/style.css
+++ b/style.css
@@ -13,14 +13,12 @@
 }
 
 /**********FIN404***************/
-body, html {
+body {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
-    width: 100%;
-    height: 100%;
+    width: 100%;   
     margin: auto;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 0;    
     padding: 0;
 }
 
