--- a/tab.css
+++ b/tab.css
@@ -162,5 +162,12 @@
     .activity__box img {
         height: 133px;
     }
+    footer {
+        justify-content: space-around;
+    }
+    .block {
+        margin: 0;
+        margin-top: 20px;
+    }
 
 }
