--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ body {
     display: flex;    
     flex-wrap: wrap;    
     justify-content: center;
+    width: 100%;
     
     
 
@@ -245,13 +246,11 @@ body {
     margin-top: 5px;
     margin-left: 13px;
     margin-bottom: 24px;
-    margin-right: 18px;  
+    margin-right: 18px;           
     height: 200px;     
     background-color: white;
     border-radius: 20px;
-    box-shadow:1px 3px 15px #c0c0c0;
-    
-    
+    box-shadow:1px 3px 15px #c0c0c0;   
     
 }
 
@@ -268,7 +267,7 @@ section h2 {
 }
 .vignette {
     height: 116px;
-    width: 236px;
+    min-width: 236px;    
     overflow: hidden;    
     margin : 5px ;
     border-radius: 15px 15px 0px 0px ;
@@ -348,6 +347,7 @@ section h2 {
     margin-bottom: 28px;
     border-radius: 20px;
     margin-top: 5px;
+    cursor: pointer;
 }
 .image__container {
     width: 130px;
