--- a/tab.css
+++ b/tab.css
@@ -83,7 +83,7 @@
         width: 40px;
         line-height: 40px;
     }
-    .i {
+    .info {
         justify-content: center;
     }
     #middle {
