--- a/tab.css
+++ b/tab.css
@@ -105,7 +105,7 @@
 
     }
 
-    #accomodation h1 {        
+    #accomodation__title {        
         margin: 10px;
         margin-left: 55px;
         margin-top: 40px;
