--- a/style.css
+++ b/style.css
@@ -241,10 +241,7 @@ body {
 .accomodation__container {
     display: flex;    
     flex-wrap: wrap;    
-    justify-content: center;
-    width: 100%;
-    
-    
+    justify-content: center;   
 
 }
 .vignette__container {
@@ -270,14 +267,14 @@ section h2 {
 }
 .vignette {
     height: 116px;
-    min-width: 236px;    
+    width: 236px;    
     overflow: hidden;    
     margin : 5px ;
     border-radius: 15px 15px 0px 0px ;
     
 }
-.vignette img {  
-    width: 100%;  
+.vignette img {    
+    width: 236px;   
     height: 110%;
     object-fit: cover;
     
