--- a/style.css
+++ b/style.css
@@ -170,10 +170,7 @@ body {
     border: 2px solid #DEEBFF;
     margin-right: 22px;
     color: #0065fc;
-    margin-left: -2px;
-    
-
-    
+    margin-right: 20px;  
     
 }
 .btnBox i{   
@@ -184,10 +181,11 @@ body {
     line-height: 51px;
     color: #0065fc;
     background-color: #DEEBFF ;
-    border-radius: 50%;
-    margin-top: -2px;
+    border-radius: 50%;    
     margin-right: 13px;
-    margin-left: -2px;
+    position: relative;
+    bottom: 2px;
+    
     
 }
 .info {
