--- a/smartphone.css
+++ b/smartphone.css
@@ -42,7 +42,8 @@
         order: -2;
         text-align: end;
         padding-right: 21px;        
-        margin-top: -37px;
+        position: relative;
+        bottom: 37px;
         
             
     }
@@ -54,7 +55,8 @@
 
     }
     #header__nav li:nth-child(2){
-        margin-top: -37px;
+        position: relative;
+        bottom: 35px;
         padding-bottom: 14px;
         border-bottom: 2px solid #f2f2f2;
     }
