--- a/smartphone.css
+++ b/smartphone.css
@@ -3,6 +3,7 @@
     body{
         margin: 0;
         padding: 0;
+        height: 100vh;
     }
     
   
@@ -15,7 +16,7 @@
         padding: 0;
         padding-left: 20px;
         padding-top: 22px;
-        margin-bottom: 7px;
+        
     }
     #header__nav {        
         margin: 0;        
@@ -43,13 +44,13 @@
         text-align: end;
         padding-right: 21px;        
         position: relative;
-        bottom: 37px;
+        bottom: 30px;
         
             
     }
     #header__nav li:nth-child(1){
         margin-right: 50%;
-        margin-top: 20px;
+        margin-top: 7px;
         border-bottom: 2px solid #f2f2f2;
         padding-bottom: 14px;
 
@@ -70,7 +71,7 @@
     }
     #premierParagraphe{
         
-        margin-top: 32px;
+        margin-top: 0px;
         margin-right: 66px;
         margin-left: 21px;        
     }     
@@ -122,7 +123,7 @@
        
     }
     #filters {
-    margin-top: 18px;  
+    margin-top: 15px;  
     margin-left: 2px;
     font-size: 1.1em;
     margin-bottom: 22px;
@@ -137,9 +138,8 @@
     .btnBox {
 
         font-size: 16px;
-        margin-right: 10px;
-        margin-left: -2px;
-        margin-bottom: 10px;
+        margin-right: 10px;        
+        margin-bottom: 12px;
         
     }
     .btnBox:hover {
@@ -166,8 +166,7 @@
         justify-content: center;
     }
     #accomodation {
-        margin: 0;        
-        
+        margin: 0;       
         min-width: 0;      
         width: 100%;
         background-color: white;
@@ -181,7 +180,8 @@
     }
     .vignette__container {
         width: 70%;
-        min-width: 334px;                
+        min-width: 334px; 
+        margin-top: 0;               
         margin-bottom: 10px;
         overflow: hidden;          
         
@@ -198,7 +198,7 @@
     }  
     section h2 {
         margin-left: 20px;  
-        margin-top: 15px;
+        margin-top: 25px;
     } 
     #popular {
         min-width: 0;
@@ -206,7 +206,7 @@
         min-height: 0;
         height: 578px ;
         margin: 0;
-        margin-top: 20px;   
+        margin-top: 15px;   
         border-radius: 0;     
 
     } 
@@ -282,13 +282,14 @@
         height: 133px;
     }
     footer {
-        flex-direction: column;
+        flex-direction: column;        
         margin: 0;
         height: 100%;
+        bottom: 0;
     }
     .block--about {
         margin: 0;
-        margin-top: 25px;
+        margin-top: 45px;
         margin-left: 27px;
         margin-bottom: 0;
     }
