--- a/smartphone.css
+++ b/smartphone.css
@@ -283,9 +283,8 @@
     }
     footer {
         flex-direction: column;        
-        margin: 0;
-        height: 100%;
-        bottom: 0;
+        margin: 0;        
+        padding: 0;
     }
     .block--about {
         margin: 0;
