--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ section h2 {
 footer {
     display: flex;         
     width: 100%;
-    height: 222px;
+    height: auto;
     margin-top: 60px;
     background-color: #f2f2f2;
 }
