--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ a {
     text-decoration: none;
     color: black;
 }
-
+main {
+    max-width: 1640px;
+    margin: auto;
+}
 body {
     font-family: 'Raleway', sans-serif;
     font-size: 1em;
-    width: 100%;   
+    width: 100%;    
     margin: auto;
     margin-top: 0;    
     padding: 0;
@@ -410,7 +413,7 @@ section h2 {
 #activity h2 {
     font-size: 16px;
     margin-left: 22px;
-    margin-top: 18px;
+    margin-top: 23px;
 }
 
 .activity__small {
@@ -432,10 +435,10 @@ section h2 {
 }
 
 .activity__box--pomegues {
-    height: 238px;
+    height: 240px;
 }
 #box__img--pomegues {
-    height: 188px;
+    height: 180px;
     overflow: hidden;
 }
 .activity__img--container {
@@ -467,14 +470,14 @@ section h2 {
     height: 195px;
 }
 #box__img--NDLG {
-    height: 145px;
+    height: 140px;
 }
 
 .activity__box--longchamp {
-    height: 209px;
+    height: 210px;
 }
 #box__img--longchamp {
-    height: 149px;
+    height: 152px;
 }
 
 #activity img {
@@ -482,7 +485,7 @@ section h2 {
 }
 footer {
     display: flex;         
-    width: 100%;
+    width: 100%;    
     height: auto;
     margin-top: 60px;
     background-color: #f2f2f2;
