--- a/smartphone.css
+++ b/smartphone.css
@@ -234,6 +234,7 @@
         margin-left: 20px;
     }
     .activity__big {
+        margin: 0;
         width: 90%;
         height: 190px;
         margin-bottom: 22px;
@@ -243,23 +244,32 @@
         width: 90%;
         justify-content: flex-start;
         height: auto;
-        margin-top: 5px;
-        margin-bottom: 20px
+        
     }
     .activity__box {
         width: 100%; 
         height: 190px;
-        margin-bottom: 20px;      
+        margin-bottom: 22px;
         overflow: hidden;
     }  
     .activity__img--container {
         height: 133px;
         overflow: hidden;
+        border: 1px solid green;
     }  
+    #box__img--vieuxPort,
+    #box__img--pomegues,
+    #box__img--frioul,
+    #box__img--parc,
+    #box__img--NDLG,
+    #box__img--longchamp {
+        height: 133px;
+    }
     
     footer {
         flex-direction: column;        
-        margin: 0;        
+        margin: 0;  
+        margin-top: 50px;      
         padding: 0;
     }
     .block--about {
