--- a/tab.css
+++ b/tab.css
@@ -12,7 +12,7 @@
         margin-right: 30px;
     }  
     
-    #tablette { /*permet l'affichage souhaité en mode tablette*/
+    #top{ /*permet l'affichage souhaité en mode tablette*/
         display: flex;
         justify-content: space-between;        
         align-items: center;
