--- a/tab.css
+++ b/tab.css
@@ -109,7 +109,7 @@
 
     #accomodation__title {        
         margin: 10px;
-        margin-left: 55px;
+        margin-left: 100px;
         margin-top: 40px;
 
         
@@ -138,7 +138,7 @@
         width: 100%;
     }    
     section h2 {
-        margin-left: 55px;
+        margin-left: 100px;
     }
     #popular {
         margin: 0;
@@ -154,13 +154,14 @@
     }
     #activity__h1 {
         margin-top: 0;
+        margin-left: 100px;
        
     }
     #activity {
-        flex-direction: column;
-        height: 994px;
+        flex-direction: column;  
+        height: 994px;   
         margin-top: 0;
-        align-content: space-around;
+        align-items: center;
     }
     .activity__big, .activity__small {
         width: 33%;
