--- a/smartphone.css
+++ b/smartphone.css
@@ -274,7 +274,7 @@
         height: 133px;
     }
     
-    footer {
+    .container {
         flex-direction: column;        
         margin: 0;  
         margin-top: 50px;      
